<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_where_to_workout"
            android:title="@string/where_can_i_workout" />

        <item
            android:id="@+id/nav_foodlookup"
            android:icon="@drawable/ic_search"
            android:title="@string/foodlookup" />
        <item
            android:id="@+id/nav_drink_water"
            android:icon="@drawable/ic_drink_water"
            android:title="@string/drink_water" />
        <item
            android:id="@+id/nav_am_i_sick"
            android:icon="@drawable/ic_sick"
            android:title="@string/nav_am_i_sick" />
        <item
            android:id="@+id/steps"
            android:icon="@drawable/ic_step"
            android:title="Step counter"/>
        <item
            android:id="@+id/nav_calorie"
            android:icon="@drawable/ic_menu_send"
            android:title="Calorie Calculator"
            />
        <item
            android:id="@+id/nav_bmi_bfp"
            android:icon="@drawable/ic_add"
            android:title="@string/bmi_and_bfp" />
        <item
            android:id="@+id/nav_find_place"
            android:icon="@drawable/ic_direction"
            android:title="Find my way "/>
        <item
            android:id="@+id/nav_movement_monitor"
            android:icon="@drawable/ic_movement_monitor"
            android:title="Movement Monitor" />
        <item
            android:id="@+id/nav_user_settings"
            android:icon="@drawable/ic_settings"
            android:title="User settings"/>
        <item
            android:id="@+id/nav_food_checker"
            android:icon="@drawable/ic_food_checker"
            android:title="Food Checker"/>
    </group>
</menu>