<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txt_Titel_Corona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="Welcome to the corona checkup"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:text="Please answer to the following questions:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag1"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group"
                        android:layout_width="match_parent"
                        android:layout_height="207dp"
                        android:layout_gravity="center_horizontal|center_vertical">

                        <RadioButton
                            android:id="@+id/rd_First_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_first_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout3d"
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag4"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group4"
                        android:layout_width="match_parent"
                        android:layout_height="207dp">

                        <RadioButton
                            android:id="@+id/rd_Fo_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_Fo_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3b"
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag2"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group2"
                        android:layout_width="match_parent"
                        android:layout_height="207dp">

                        <RadioButton
                            android:id="@+id/rd_Sec_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_Sec_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3e"
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag5"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group5"
                        android:layout_width="match_parent"
                        android:layout_height="207dp">

                        <RadioButton
                            android:id="@+id/rd_Fif_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_Fif_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag3"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rd_Third_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_Third_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3f"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag6"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rd_Six_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_Six_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3g"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_symptom7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/vraag7"
                        android:textColor="#000000"
                        android:textStyle="italic" />

                    <RadioGroup
                        android:id="@+id/rd_group7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rd_Seven_yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="ja" />

                        <RadioButton
                            android:id="@+id/rd_Seven_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="nee" />

                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_saveSymptoms"
                        android:layout_width="274dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#85148C0B"
                        android:text="Save  in cloud and calculate"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/btn_calculateRisk"
                        android:layout_width="259dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ADDF0000"
                        android:text="Show all my results" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_Result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>